paging error edit, add recipe to localstorage, likerecipe list css add

--- a/src/style.css
+++ b/src/style.css
@@ -9,17 +9,23 @@
 body {
   width: 100%;
   height: 100vh;
-  /* overflow-y: hidden; */
+  overflow-y: hidden;
   font-family: 'Poppins', sans-serif;
   color: rgb(56, 56, 56);
 }
 
+svg {
+  pointer-events: none;
+}
+
 ul {
   list-style: none;
+  color: rgb(56, 56, 56);
 }
 
 a {
   text-decoration: none;
+  color: rgb(56, 56, 56);
 }
 
 button {
@@ -27,6 +33,27 @@ button {
   outline: none;
   color: rgb(56, 56, 56);
   font-family: 'Poppins', sans-serif;
+}
+
+.load__img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.load__img img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  width: 7rem;
+  height: 7rem;
+  background-color: transparent;
 }
 
 /* navbar */
@@ -54,6 +81,74 @@ nav {
   cursor: pointer;
 }
 
+.like__list {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 30%;
+  height: 100%;
+  background-color: rgb(248, 192, 88);
+  z-index: 200;
+  padding: 5rem 1rem 1rem;
+}
+
+.like__list > button {
+  position: fixed;
+  right: 1rem;
+  top: 1rem;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+}
+
+.like__items {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.like__list__item {
+  position: relative;
+  width: 70%;
+  height: auto;
+  background-color: wheat;
+  padding: 10px;
+  border-radius: 6px;
+  margin: 0 auto;
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.8);
+}
+
+.deleteBtn {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  width: 24px;
+  cursor: pointer;
+  background-color: transparent;
+  fill: rgb(228, 132, 42);
+}
+
+.linkBtn > svg {
+  width: 30px;
+  cursor: pointer;
+  width: 20px;
+}
+
+.like__list__item > img {
+  width: 100%;
+  mask-border: 4px;
+}
+.like__list__item > p {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  word-break: keep-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 /* Search */
 #search {
   width: 100%;
@@ -71,17 +166,11 @@ nav {
   min-height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  /* background: rgb(0, 0, 0); */
-  /* background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0.77) 0%,
-    rgba(255, 255, 255, 0) 50%,
-    rgba(0, 0, 0, 0.7679446778711485) 100%
-  ); */
   padding: 120px 80px 80px;
 }
 
 .arrow__down {
+  display: none;
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -121,10 +210,6 @@ nav {
   align-items: center;
   justify-content: space-evenly;
 }
-
-/* .searchbar svg {
-  margin-right: 6px;
-} */
 
 .search__input {
   background-color: #f4f6ff;
@@ -229,6 +314,7 @@ nav {
 }
 
 .recipe__card {
+  position: relative;
   width: calc(25% - 24px);
   margin: 0 12px 24px;
   height: 400px;
@@ -284,6 +370,21 @@ nav {
   cursor: pointer;
 }
 
+.recipe__mark {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  cursor: pointer;
+  background-color: transparent;
+  fill: rgb(196, 196, 196);
+}
+
+.active {
+  fill: rgb(255, 207, 50);
+}
+
 /* paging css*/
 .pagination {
   width: auto;
@@ -313,5 +414,6 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 2px;
+  padding: 0 4px;
+  cursor: pointer;
 }
