--- a/src/style.css
+++ b/src/style.css
@@ -84,18 +84,21 @@ nav {
 .like__list {
   position: fixed;
   top: 0;
-  right: 0;
+  right: -30%;
   width: 30%;
   height: 100%;
   background-color: rgb(248, 192, 88);
   z-index: 200;
-  padding: 5rem 1rem 1rem;
+  padding: 1rem 1rem 1rem;
+  transition: all 0.4s ease-in-out;
+}
+
+.show {
+  right: 0;
 }
 
 .like__list > button {
-  position: fixed;
-  right: 1rem;
-  top: 1rem;
+  margin-left: 80%;
   cursor: pointer;
   width: 30px;
   height: 30px;
@@ -106,6 +109,7 @@ nav {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  margin-top: 2rem;
 }
 
 .like__list__item {
@@ -117,6 +121,7 @@ nav {
   border-radius: 6px;
   margin: 0 auto;
   box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.8);
+  margin-bottom: 10px;
 }
 
 .deleteBtn {
@@ -140,13 +145,10 @@ nav {
   mask-border: 4px;
 }
 .like__list__item > p {
+  width: 100%;
   display: inline-block;
   font-size: 16px;
   font-weight: 600;
-  word-break: keep-all;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 /* Search */
