--- a/src/style.css
+++ b/src/style.css
@@ -84,13 +84,21 @@ nav {
 .like__list {
   position: fixed;
   top: 0;
-  right: -30%;
-  width: 30%;
+  right: -400px;
+  width: 400px;
   height: 100%;
-  background-color: rgb(248, 192, 88);
+  background-color: rgba(255, 217, 91, 0.96);
   z-index: 200;
   padding: 1rem 1rem 1rem;
   transition: all 0.4s ease-in-out;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.nofavorites {
+  display: flex;
+  justify-content: center;
+  margin-top: 4rem;
 }
 
 .show {
@@ -98,7 +106,7 @@ nav {
 }
 
 .like__list > button {
-  margin-left: 80%;
+  margin-left: 90%;
   cursor: pointer;
   width: 30px;
   height: 30px;
@@ -180,6 +188,7 @@ nav {
   width: 44px;
   z-index: 40;
   cursor: pointer;
+  background-color: transparent;
 }
 
 .search {
@@ -304,6 +313,7 @@ nav {
   width: 40px;
   z-index: 40;
   cursor: pointer;
+  background-color: transparent;
 }
 
 .recipe__list {
