--- a/src/result.css
+++ b/src/result.css
@@ -1,18 +1,42 @@
+/* Result */
 #result {
   width: 100%;
   max-width: 1600px;
-  min-height: 100vh;
-  height: auto;
-  margin: 0 auto 10px;
-  /* padding: 120px 80px 80px; */
-  /* background-image: url('img/cinema_2.jpg'); */
-  background-position: left;
+  height: 100%;
+  margin: 0 auto;
+  padding: 120px 80px 80px;
+  background-image: url('img/result.jpg');
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
+  /* overflow-y: scroll; */
 }
 
-.result {
-  width: 90%;
+.invisible {
+  display: none;
+}
+
+.no__result {
+  color: #ffffff;
+  font-size: 32px;
+  margin: 3rem auto;
+}
+
+.arrow__up {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60px;
+  z-index: 40;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.recipe__list {
+  width: 94%;
+  height: 100%;
   margin: auto;
   display: flex;
   align-items: center;
@@ -20,16 +44,237 @@
 }
 
 .recipe__card {
-  width: calc(25% - 24px);
-  margin: 0 12px 24px;
-  height: 300px;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 4px;
+  position: relative;
+  width: calc(25% - 30px);
+  margin: 0 15px 24px;
+  height: 440px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
   display: flex;
   justify-content: center;
-  padding: 10px;
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.8);
+  /* padding: 14px; */
+}
+
+.recipe__card__inner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
 }
 
 .recipe__card__inner img {
-  width: 200px;
+  width: 100%;
+  margin: 0 auto;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.recipe__card__inner > h3 {
+  width: 100%;
+  padding-left: 10px;
+  display: inline-block;
+  font-size: 18px;
+  word-break: keep-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom: 10px;
+}
+
+.recipe__card__inner > p {
+  font-size: 14px;
+}
+
+.recipe__btn {
+  width: 120px;
+  height: 40px;
+  padding: 4px;
+  border-radius: 50px;
+  background-color: rgb(255, 213, 107);
+  margin-top: 10px;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.recipe__mark {
+  width: 34px;
+  height: 34px;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  cursor: pointer;
+  background-color: transparent;
+  fill: rgb(196, 196, 196);
+}
+
+.recipe__mark svg {
+  width: 100%;
+}
+
+.active {
+  fill: rgb(255, 207, 50);
+}
+
+/* paging css*/
+.pagination {
+  width: auto;
+  height: 30px;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+}
+
+#pages {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.prev,
+.next,
+.page {
+  width: 30px;
+  background-color: #ffffff;
+  margin: 0 2px;
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 4px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  #result {
+    padding: 80px 40px 80px;
+  }
+
+  .arrow__up {
+    top: 30px;
+    width: 40px;
+  }
+
+  .recipe__list {
+    height: 100%;
+    width: 100%;
+    margin: auto;
+  }
+
+  .recipe__card {
+    width: calc(25% - 12px);
+    height: 260px;
+    border-radius: 10px;
+    margin: 0 6px;
+    padding: 10px;
+  }
+
+  .recipe__card__inner img {
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .recipe__card__inner > h3 {
+    font-size: 12px;
+    margin-bottom: 8px;
+    width: 100%;
+    padding-left: 10px;
+    display: inline-block;
+    word-break: keep-all;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .recipe__card__inner > p {
+    font-size: 12px;
+  }
+
+  .recipe__btn {
+    width: auto;
+    height: auto;
+    margin-top: 8px;
+    font-size: 14px;
+    line-height: 1;
+    padding: 8px;
+  }
+
+  .recipe__mark {
+    width: 20px;
+    height: 20px;
+    right: 6px;
+    bottom: 6px;
+  }
+
+  .prev,
+  .next,
+  .page {
+    width: 26px;
+    height: 26px;
+    background-color: #ffffff;
+    margin: 0 2px;
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 4px;
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .recipe__list {
+    height: 100%;
+    width: 100%;
+    margin: auto;
+    overflow-y: scroll;
+    padding-top: 2rem;
+  }
+
+  .recipe__card {
+    width: 70%;
+    height: 400px;
+    border-radius: 10px;
+    margin: 0 auto 20px;
+    padding: 10px;
+  }
+
+  .recipe__card__inner > h3 {
+    font-size: 14px;
+  }
+
+  .recipe__btn {
+    padding: 8px 10px;
+  }
+
+  .recipe__mark {
+    width: 30px;
+    height: 30px;
+    right: 6px;
+    bottom: 6px;
+  }
+
+  .prev,
+  .next,
+  .page {
+    width: 26px;
+    height: 26px;
+    background-color: #ffffff;
+    margin: 0 2px;
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 4px;
+    cursor: pointer;
+  }
 }
